--- a/.pylintrc
+++ b/.pylintrc
@@ -85,7 +85,11 @@ disable=raw-checker-failed,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
-        use-symbolic-message-instead
+        use-symbolic-message-instead,
+        deprecated-module,
+        deprecated-method,
+        redefined-outer-name,
+        unused-argument
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
